js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-fn-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
m
(
)
{
function
fn
(
)
{
something
.
#
x
}
}
}
;
